--- a/frame/Makefile
+++ b/frame/Makefile
@@ -5,7 +5,7 @@ OBJECT = $(patsubst %.cpp,%.o,$(SOURCE))
 LIB_DIR = $(shell dirname `pwd`)/lib
 HEADER = $(shell dirname `pwd`)/server
 CC = g++
-CFLAGS = -std=c++11 -pthread
+CFLAGS = -std=c++11 -pthread -Werror=return-type
 
 $(BIN):
 	$(CC) $(CFLAGS) -I $(HEADER) -L $(LIB_DIR) -lkiddo main.cpp -Wl,-rpath $(LIB_DIR) -o $@
